fix: remove pre code blocks

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,6 +50,7 @@ collections:
             "contentImageBg",
             "pageHeader",
             "contentWithFullSizeImageLeft",
+            "twoImages",
           ]
       - {
           label: "Reihenfolge",
