--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Markus Siering",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt build && nuxt export",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "lint-staged": {
@@ -21,23 +21,26 @@
     }
   },
   "dependencies": {
-    "@nuxt/content": "^1.4.1",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "nuxt": "^2.13.3"
+    "@nuxt/content": "^1.8.1",
+    "@nuxtjs/pwa": "^3.0.2",
+    "contentful": "^7.14.6",
+    "contentful-rich-text-vue-renderer": "^1.1.5",
+    "nuxt": "^2.14.4",
+    "nuxt-esbuild": "^1.0.2"
   },
   "devDependencies": {
-    "@nuxt/components": "^1.0.7",
-    "@nuxtjs/eslint-config": "^3.0.0",
+    "@nuxt/components": "^1.1.0",
+    "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^7.5.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.0.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "stylelint": "^13.6.1"
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
+    "stylelint": "^13.7.0"
   }
 }
