--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.2.2",
+    "@nuxtjs/robots": "^2.4.2",
+    "@nuxtjs/sitemap": "^2.4.0",
     "contentful": "^7.14.13",
     "contentful-rich-text-vue-renderer": "^1.1.5",
     "nuxt": "^2.14.7",
