--- a/package.json
+++ b/package.json
@@ -21,28 +21,31 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.2.2",
+    "@nuxtjs/pwa": "^3.3.2",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
-    "contentful": "^7.14.13",
+    "contentful": "^8.1.4",
     "contentful-rich-text-vue-renderer": "^1.1.5",
-    "nuxt": "^2.14.7",
+    "nuxt": "^2.14.11",
     "nuxt-esbuild": "^1.0.2",
+    "regenerator-runtime": "^0.13.7",
+    "vue-cookie-law": "^1.13.3",
     "vue-observe-visibility": "^0.4.6"
   },
   "devDependencies": {
-    "@nuxt/components": "^1.1.1",
+    "@nuxt/components": "^1.2.2",
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-nuxt": ">=2.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2",
+    "eslint-plugin-prettier": "^3.2.0",
+    "husky": "^4.3.5",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
     "stylelint": "^13.8.0"
   }
 }
