feat: seo all the things

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "virtualsupporttalks",
   "version": "1.0.0",
-  "description": "My ultimate Nuxt.js project",
+  "description": "Redezeit für dich",
   "author": "Markus Siering",
   "private": true,
   "engines": {
