feat(i18n): add basic setup for i18n

--- a/package.json
+++ b/package.json
@@ -24,31 +24,32 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.3.2",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
-    "contentful": "^8.1.4",
-    "contentful-rich-text-vue-renderer": "^1.1.5",
-    "nuxt": "^2.14.11",
+    "contentful": "^8.1.7",
+    "contentful-rich-text-vue-renderer": "^2.0.0",
+    "nuxt": "^2.14.12",
     "nuxt-esbuild": "^1.0.2",
+    "nuxt-i18n": "^6.18.0",
     "regenerator-runtime": "^0.13.7",
     "vue-cookie-law": "^1.13.3",
-    "vue-observe-visibility": "^0.4.6"
+    "vue-observe-visibility": "^1.0.0"
   },
   "devDependencies": {
-    "@nuxt/components": "^1.2.2",
+    "@nuxt/components": "^1.2.5",
     "@nuxtjs/eslint-config": "^5.0.0",
-    "@nuxtjs/eslint-module": "^3.0.1",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-nuxt": ">=2.0.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "husky": "^4.3.6",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
-    "stylelint": "^13.8.0"
+    "stylelint": "^13.9.0"
   }
 }
