--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue-observe-visibility": "^1.0.0"
   },
   "devDependencies": {
-    "@nuxt/components": "^1.2.6",
+    "@contentful/rich-text-types": "^14.1.2",
+    "@nuxt/components": "^2.0.0",
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
