--- a/package.json
+++ b/package.json
@@ -22,29 +22,36 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "contentful": "^8.5.0",
+    "contentful": "^9.1.5",
     "contentful-rich-text-vue-renderer": "^2.0.0",
     "nuxt": "^2.15.8",
     "nuxt-esbuild": "^1.1.0",
     "nuxt-i18n": "^6.28.1",
+    "postcss-html": "^1.3.0",
     "regenerator-runtime": "^0.13.9",
+    "stylelint-config-recommended-vue": "^1.1.0",
     "vue-cookie-law": "^1.13.3",
     "vue-observe-visibility": "^1.0.0"
   },
   "devDependencies": {
-    "@contentful/rich-text-types": "^15.1.0",
+    "@babel/eslint-parser": "^7.5.4",
+    "@contentful/rich-text-types": "^15.11.0",
     "@nuxt/components": "^2.2.1",
-    "@nuxtjs/eslint-config": "^6.0.1",
+    "@nuxt/postcss8": "^1.1.3",
+    "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/stylelint-module": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^7.32.0",
+    "@nuxtjs/stylelint-module": "^4.1.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": ">=2.0.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2",
-    "stylelint": "^13.13.1"
+    "eslint-plugin-nuxt": ">=3.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "lint-staged": "^12.1.4",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
+    "tailwindcss": "^3.0.7"
   }
 }
