--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nuxt-i18n": "^6.28.1",
     "postcss-html": "^1.3.0",
     "regenerator-runtime": "^0.13.9",
+    "slugify": "^1.6.5",
     "stylelint-config-recommended-vue": "^1.1.0",
     "vue-cookie-law": "^1.13.3",
     "vue-observe-visibility": "^1.0.0"
@@ -43,15 +44,15 @@
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.1",
-    "eslint": "^8.6.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": ">=3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "lint-staged": "^12.1.5",
+    "lint-staged": "^12.1.7",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "stylelint": "^14.2.0",
-    "tailwindcss": "^3.0.11"
+    "tailwindcss": "^3.0.15"
   }
 }
