--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@remix-run/react": "^1.2.1",
     "contentful": "^9.1.6",
     "dotenv": "^15.0.0",
+    "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.1",
     "remix": "^1.2.1",
+    "remix-i18next": "^3.0.0",
     "remix-seo": "^0.1.0",
     "usehooks-ts": "^2.3.0"
   },
