--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "contentful": "^9.1.6",
     "dotenv": "^15.0.0",
     "react": "^17.0.2",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.1",
     "remix-seo": "^0.1.0",
