--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^15.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga4": "^1.4.1",
     "remix": "^1.2.1",
     "remix-seo": "^0.1.0",
     "usehooks-ts": "^2.3.0"
