--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "contentful": "^9.1.6",
     "dotenv": "^15.0.0",
     "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.1",
