--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@contentful/rich-text-react-renderer": "^15.11.1",
     "@heroicons/react": "^1.0.5",
     "@netlify/functions": "^0.10.0",
-    "@remix-run/netlify": "^1.2.1",
-    "@remix-run/react": "^1.2.1",
-    "contentful": "^9.1.6",
+    "@remix-run/netlify": "1.3.2",
+    "@remix-run/react": "1.3.2",
+    "contentful": "^10.0.0-beta-v10.3",
     "dotenv": "^15.0.0",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -18,13 +18,14 @@
     "react-dom": "^17.0.2",
     "react-ga4": "^1.4.1",
     "react-i18next": "^11.16.1",
-    "remix": "^1.2.1",
+    "remix": "1.3.2",
+    "remix-etag": "^0.2.1",
     "remix-i18next": "^3.0.0",
     "remix-seo": "^0.1.0",
     "usehooks-ts": "^2.3.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.2.1",
+    "@remix-run/dev": "1.3.2",
     "@tailwindcss/typography": "^0.5.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
@@ -44,9 +45,9 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "npm run build:css && remix build",
+    "build": "yarn build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
-    "dev": "concurrently \"npm run dev:css\" \"cross-env NODE_ENV=development netlify dev\"",
+    "dev": "concurrently \"yarn dev:css\" \"cross-env NODE_ENV=development netlify dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "postinstall": "remix setup node",
     "start": "cross-env NODE_ENV=production netlify dev",
