--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "regenerator-runtime": "^0.13.9",
     "slugify": "^1.6.5",
     "stylelint-config-recommended-vue": "^1.4.0",
+    "v-click-outside": "^3.1.2",
     "vue-cookie-law": "^1.13.3",
     "vue-observe-visibility": "^1.0.0"
   },
