--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "yarn build"
+  command = "remix build"
   publish = "public"
 
 [dev]
-  command = "yarn dev"
+  command = "remix watch"
   port = 3000
 
 [[redirects]]
