fix: prevent scroll to top on speaker selection form

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "PORT=4242 remix dev",
     "start": "cross-env NODE_ENV=production netlify dev",
     "typecheck": "tsc",
     "contentful-typescript-codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts"
