clean up after running eslint (remove unused components/variables, sort tailwind classes automatically...)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "PORT=4242 remix dev",
     "start": "cross-env NODE_ENV=production netlify dev",
     "typecheck": "tsc",
-    "contentful-typescript-codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts"
+    "contentful-typescript-codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts",
+    "lint": "eslint app --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.16.4",
