--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,19 @@
 [build]
 command = "npm run build"
-publish = "build/client"
+publish = "build"
 
 [dev]
 command = "npm run dev"
 framework = "vite"
 
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/server"
+  status = 200
+
 # Set immutable caching for static files, because they have fingerprinted filenames
 
 [[headers]]
-for = "/build/*"
-
-[headers.values]
-
-"Cache-Control" = "public, max-age=31560000, immutable"
+    for = "/build/*"
+    [headers.values]
+        "Cache-Control" = "public, max-age=31560000, immutable"
