--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
     "autoprefixer": "^10.4.20",
+    "classnames": "^2.5.1",
     "contentful": "^10.12.7",
     "cross-env": "^7.0.3",
     "i18next": "^23.15.2",
