--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "biome check .",
     "contentful-typescript-codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts",
     "start": "netlify serve",
     "typecheck": "react-router typegen && tsc",
@@ -17,11 +17,13 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "@netlify/edge-functions": "^2.11.0",
+    "@react-router/fs-routes": "^7.7.1",
     "@react-router/node": "^7.0.0",
     "@react-router/serve": "^7.0.0",
     "autoprefixer": "^10.4.19",
     "contentful": "^10.12.7",
     "cross-env": "^7.0.3",
+    "dotenv": "^17.2.1",
     "i18next": "^24.0.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-fs-backend": "^2.3.1",
@@ -39,24 +41,18 @@
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.1.3",
     "@netlify/vite-plugin-react-router": "^1.0.1",
     "@react-router/dev": "^7.0.0",
-    "react-router-devtools": "latest",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "^24.1.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
     "contentful-management": "^11.27.6",
     "contentful-typescript-codegen": "^3.4.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
+    "react-router-devtools": "latest",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.1",
