--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,6 @@ framework = "vite"
     for = "/build/*"
     [headers.values]
         "Cache-Control" = "public, max-age=31560000, immutable"
+    for = "/*"
+    [headers.values]
+        "Content-Security-Policy" = "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.brevo.com; style-src 'self' 'unsafe-inline';"
