--- a/netlify.toml
+++ b/netlify.toml
@@ -9,9 +9,12 @@ framework = "vite"
 # Set immutable caching for static files, because they have fingerprinted filenames
 
 [[headers]]
-    for = "/build/*"
-    [headers.values]
-        "Cache-Control" = "public, max-age=31560000, immutable"
-    for = "/*"
-    [headers.values]
-        "Content-Security-Policy" = "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.brevo.com; style-src 'self' 'unsafe-inline';"
+  for = "/build/*"
+  [headers.values]
+    "Cache-Control" = "public, max-age=31560000, immutable"
+
+# Add the Content-Security-Policy header for all HTML pages, allowing Brevo scripts and resources.
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = "script-src 'self' https://cdn.brevo.com; connect-src 'self' https://cdn.brevo.com;"
