chore: cleanup + sort out types

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**", "!!@types/generated"]
+    "includes": ["**", "!!types/generated"]
   },
   "formatter": {
     "enabled": true,
